# lapcounter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  contagiri.py  geometry.c  geometry.h  geometry.py  lapcounter.c  lapcounter.h  lapcounter_playground.cpp  lapcounter_stats.cpp  main.c  main.py  makefile  pygame-script.py
GPS_LOG_AND_PROCESS/1/: result.json
GPS_LOG_AND_PROCESS/1/result/gps/: gga.csv  gll.csv
GPS_LOG_AND_PROCESS/2/: result.json
GPS_LOG_AND_PROCESS/2/result/gps/: gga.csv  rmc.csv  vtg.csv
GPS_LOG_AND_PROCESS/3/: result.json
GPS_LOG_AND_PROCESS/3/result/gps/: gga.csv  gll.csv  rmc.csv  vtg.csv
c/: geometry.c  geometry.h  lapcounter.c  lapcounter.h  main.c  makefile  track-8laps.txt
drawLaps/: drawLaps
drawLaps/source/: drawLaps.java  drawLaps.pde
example_tracks/: track-1lap-8.txt  track-2lap-bacteria.txt  track-8lap-tangled.txt
lapcounter/: CMakeLists.txt  lapcounter.c  lapcounter.h  lapcounter.i
lapcounter/math/: point.c  point.h
logs/: half_skidpad_1000_Hz.csv  half_skidpad_100_Hz.csv  half_skidpad_10_Hz.csv  half_skidpad_1_Hz.csv  track_drive.csv  trackdrive_100_Hz.csv  trackdrive_10_Hz.csv  trackdrive_1_Hz.csv
oldVersion/src/utils/vector/: vector.c  vector.h
oldVersion/src/utils/vector/point/: point.h
oldVersion/test/: compile.sh
oldVersion/test/example_tracks/: track-1lap-oval.txt
oldVersion/test/example_tracks/real/: track_999_unknown_20201216_101025.txt
oldVersion/test/worldmap/: worldmap.c
python_prototype/: contagiri.py  geometry.py  main.py  pygame-script.py
python_prototype/GPS_LOG_AND_PROCESS/1/result/gps/: rmc.csv  vtg.csv
src/: lapcounter.c  lapcounter.h
src/utils/vector/point/: point.c
test/: compile.sh  coordsGiriPovo.txt  coordsGiriPovoPulite.txt  coordsGiriPovoPuliteTagliate.txt  coordsProva1Lap.txt  createCanDump.c  createDumpToStdout.c  flow.json  initializeVirtualCan.sh  stderrOut.txt  test.c  unGiroPovoA2100E100CoordsInEccesso.txt  worldmap.sh
test/example_tracks/: real.txt  track-1lap-c.txt  track-2lap-oval.txt  track-5lap-tangled.txt
test/example_tracks/real/: track_999_unknown_20201216_133015.txt  track_999_unknown_20201216_150901.txt
test/worldmap/: worldmap.h
(+1 files in other folders)
